1config-ui/resources/public/css/style.css
body {
    background-color: #f5f7fa;
    font-family: 'Cardo', serif;
}

.modal-selector {
    font-family: 'Cardo', serif;
    font-size: 12px;
}
.modal-textarea {
    height: 350px;
    width: 250px;
    font-family: 'Cardo', serif;
    font-size: 12px;
}

.master-key-width {
    width: 30px;
}

.overflow-class {
    font-family: 'Cardo', serif;
    font-size: 13px;
    height: 700px;
    overflow-y: scroll;
}

/** MODAL XXXXXXX START */
.modal {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    opacity: 0;
    visibility: hidden;
    transform: scale(1.1);
    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
}

.ui[class*="right ribbon"].label {
    left: calc(100% - 6.5rem);
    padding-left: 1.2em;
    padding-right: calc(1rem + 1.2em);
}

.close-button {
    float: right;
    width: 1.5rem;
    line-height: 1.5rem;
    text-align: center;
    cursor: pointer;
    border-radius: 0.25rem;
    background-color: lightgray;
}
.close-button:hover {
    background-color: darkgray;
}
.show-modal {
    opacity: 1;
    visibility: visible;
    transform: scale(1.0);
    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
}
/** MODAL XXXXXXX END */


/*override grid style for menu block*/
.ui.grid {
    margin-top: 1rem;
}

.ui.form textarea:not([rows]) {
    min-height: 20em;
    max-height: 55em;
}

.ui.form input[type=text] {
    font-family: 'Cardo', serif;
    font-size: 14px;
    padding-left: 9px;
}

select.ui.dropdown {
    font-family: 'Cardo', serif;
    font-size: 14px;
    /*color: lightgrey;*/
}

.ui.divider {
    text-transform: none;
}

.inputfile {
    width: 0.1px;
    height: 0.1px;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    z-index: -1;
}

.sticky-nav-bar {
    background: #2382ca;
    position: fixed;
    top: 0;
    z-index: 1;
    width: 100%;
}

.footer {
    position: fixed;
    color: grey;
    right: 0;
    bottom: 0;
    left: 0;
    padding: 1rem;
    background-color: #efefef;
    text-align: center;
}

/*slider style*/
.switch {
    position: relative;
    display: inline-block;
    width: 49px;
    height: 21px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #c0c1c1;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 21px;
    width: 21px;
    left: 0px;
    bottom: 0px;
    background-color: #f9f9f9;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked + .slider {
    background-color: #c0c1c1;
}

input:focus + .slider {
    box-shadow: 0 0 1px #c0c1c1;
}

input:checked + .slider:before {
    -webkit-transform: translateX(29px);
    -ms-transform: translateX(29px);
    transform: translateX(29px);
}

.slider.round {
    border-radius: 60px;
}

.slider.round:before {
    border-radius: 70%;
}

.minified-mode-label {
    margin-left: 3px;
}
/*slider style end*/

.sidenav {
    font-family: 'Cardo', serif;
    font-size: 13px;
    height: 100%;
    width: 350px;
    position: fixed;
    z-index: 1;
    top: 42px;
    left: 0;
    background-color:  #c3cfe2;
    /*overflow-x: hidden;*/
    overflow-x: scroll;
    transform: translateX(-100%);
    -webkit-transform: translateX(-100%);
}

.visible {
    animation: slide-in 0.5s forwards;
    -webkit-animation: slide-in 0.5s forwards;
}

.hidden {
    animation: slide-out 0.5s forwards;
    -webkit-animation: slide-out 0.5s forwards;
}

@keyframes slide-in {
    100% { transform: translateX(0%); }
}

@-webkit-keyframes slide-in {
    100% { -webkit-transform: translateX(0%); }
}

@keyframes slide-out {
    0% { transform: translateX(0%); }
    100% { transform: translateX(-100%); }
}

@-webkit-keyframes slide-out {
    0% { -webkit-transform: translateX(0%); }
    100% { -webkit-transform: translateX(-100%); }
}

/*Tooltip*/
.tooltip {
    position: relative;
    display: inline-block;
    border-bottom: 1px dotted black;
}

.tooltip .tooltiptext {
    visibility: hidden;
    width: 320px;
    background-color: #555;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    bottom: 125%;
    left: 50%;
    margin-left: -60px;
    opacity: 0;
    transition: opacity 0.3s;
}

.tooltip .tooltiptext::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
    opacity: 1;
}

.onecfg-filter-block {
    margin: 3px;
}

.ui.placeholder.segment textarea {
    max-width: 32rem !important;
}

.show-element {
    display: block;
}
.hide-element {
    display: none;
}

.key-input-width {
    width: 120px;
}

.env-input-width {
    width: 100px;
}

.version-input-width {
    width: 80px;
}

.config-table-scroll {
    overflow-x: hidden;
    overflow-y: auto;
    margin-bottom: 33px;
}

